objects/Parent__c/Parent__c.object-meta.xml
<CustomObject>
    <description>개체 레코드 타입에 따른 사용 방법(부모)</description>
    <label>부모</label>
    <nameField>
        <label>부모 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>