objects/Parent__c/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>자동 번호</label>
    <type>AutoNumber</type>
</CustomField>