objects/Parent__c/fields/Boolean__c.field-meta.xml
<CustomField>
    <fullName>Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>확인란</label>
    <type>Checkbox</type>
</CustomField>