objects/Parent__c/fields/BooleanFomula__c.field-meta.xml
<CustomField>
    <fullName>BooleanFomula__c</fullName>
    <formula>MaxDecimal__c &gt; 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수식확인란</label>
    <type>Checkbox</type>
</CustomField>