objects/Parent__c/fields/CurrencyFomula__c.field-meta.xml
<CustomField>
    <fullName>CurrencyFomula__c</fullName>
    <formula>MaxCurrency__c - MinCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수식통화</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>