objects/Parent__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>날짜</label>
    <type>Date</type>
</CustomField>