objects/Parent__c/fields/DateFomula__c.field-meta.xml
<CustomField>
    <fullName>DateFomula__c</fullName>
    <formula>LastestDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수식날짜</label>
    <type>Date</type>
</CustomField>