objects/Parent__c/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <label>날짜/시간</label>
    <type>DateTime</type>
</CustomField>