objects/Parent__c/fields/Decimal__c.field-meta.xml
<CustomField>
    <fullName>Decimal__c</fullName>
    <label>숫자</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>