objects/Parent__c/fields/DecimalFomula__c.field-meta.xml
<CustomField>
    <fullName>DecimalFomula__c</fullName>
    <formula>MaxDecimal__c - MinDecimal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수식숫자</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>