objects/Parent__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>이메일</label>
    <type>Email</type>
</CustomField>