objects/Parent__c/fields/LastestDate__c.field-meta.xml
<CustomField>
    <fullName>LastestDate__c</fullName>
    <label>최근날짜</label>
    <summarizedField>Child__c.Date__c</summarizedField>
    <summaryForeignKey>Child__c.Parents__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>