objects/Parent__c/fields/LongTextArea__c.field-meta.xml
<CustomField>
    <fullName>LongTextArea__c</fullName>
    <label>긴 텍스트 영역</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>