objects/Parent__c/fields/MaxCurrency__c.field-meta.xml
<CustomField>
    <fullName>MaxCurrency__c</fullName>
    <label>통화최대값</label>
    <summarizedField>Child__c.Currency__c</summarizedField>
    <summaryForeignKey>Child__c.Parents__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>