objects/Parent__c/fields/MaxDecimal__c.field-meta.xml
<CustomField>
    <fullName>MaxDecimal__c</fullName>
    <label>숫자최대값</label>
    <summarizedField>Child__c.Decimal__c</summarizedField>
    <summaryForeignKey>Child__c.Parents__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>