objects/Parent__c/fields/MinCurrency__c.field-meta.xml
<CustomField>
    <fullName>MinCurrency__c</fullName>
    <label>통화최소값</label>
    <summarizedField>Child__c.Currency__c</summarizedField>
    <summaryForeignKey>Child__c.Parents__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>