objects/Parent__c/fields/MinDecimal__c.field-meta.xml
<CustomField>
    <fullName>MinDecimal__c</fullName>
    <label>숫자최소값</label>
    <summarizedField>Child__c.Decimal__c</summarizedField>
    <summaryForeignKey>Child__c.Parents__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>