objects/Parent__c/fields/OldestDate__c.field-meta.xml
<CustomField>
    <fullName>OldestDate__c</fullName>
    <label>오래된날짜</label>
    <summarizedField>Child__c.Date__c</summarizedField>
    <summaryForeignKey>Child__c.Parents__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>