objects/Parent__c/fields/Parents__c.field-meta.xml
<CustomField>
    <fullName>Parents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>부모</label>
    <referenceTo>Parent__c</referenceTo>
    <relationshipLabel>부모</relationshipLabel>
    <relationshipName>Parent_Parent_Rel</relationshipName>
    <type>Lookup</type>
</CustomField>