objects/Parent__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <label>백분율</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>