objects/Parent__c/fields/PercentFomula__c.field-meta.xml
<CustomField>
    <fullName>PercentFomula__c</fullName>
    <formula>Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수식백분율</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>