objects/Parent__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>전화</label>
    <type>Phone</type>
</CustomField>