objects/Parent__c/fields/SelectList__c.field-meta.xml
<CustomField>
    <fullName>SelectList__c</fullName>
    <label>선택 목록</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>