objects/Parent__c/fields/SumCurrency__c.field-meta.xml
<CustomField>
    <fullName>SumCurrency__c</fullName>
    <label>통화합계</label>
    <summarizedField>Child__c.Currency__c</summarizedField>
    <summaryForeignKey>Child__c.Parents__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>