objects/Parent__c/fields/SumDecimal__c.field-meta.xml
<CustomField>
    <fullName>SumDecimal__c</fullName>
    <label>숫자합계</label>
    <summarizedField>Child__c.Decimal__c</summarizedField>
    <summaryForeignKey>Child__c.Parents__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>