objects/Parent__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>텍스트</label>
    <length>255</length>
    <type>Text</type>
</CustomField>