objects/Parent__c/fields/TextArea__c.field-meta.xml
<CustomField>
    <fullName>TextArea__c</fullName>
    <label>텍스트 영역</label>
    <type>TextArea</type>
</CustomField>