objects/Parent__c/fields/TextEncryption__c.field-meta.xml
<CustomField>
    <fullName>TextEncryption__c</fullName>
    <label>텍스트암호화</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>