objects/Parent__c/fields/TextFomula__c.field-meta.xml
<CustomField>
    <fullName>TextFomula__c</fullName>
    <formula>Text__c &amp; TextArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수식텍스트</label>
    <type>Text</type>
</CustomField>