objects/Parent__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>시간</label>
    <type>Time</type>
</CustomField>