objects/Parent__c/fields/TimeFomula__c.field-meta.xml
<CustomField>
    <fullName>TimeFomula__c</fullName>
    <formula>Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수식시간</label>
    <type>Time</type>
</CustomField>