objects/Parent__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>